--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,6 @@ joblib==1.0.1
 Flask==1.1.2
 scipy==1.6.1
 numpy==1.19.4
-dlib==19.22.1
 pandas==1.2.0
-imutils==0.5.4
-opencv_python==4.5.1.48
 scikit_learn==1.0.1
-selenium==4.0.0
+gunicorn==20.1.0
